--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "A Minimal Book Example"
+title: "A Minimal Book Example as Test"
 author: "John Yuill"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
